<resources>
    <string name="app_name">SqueakAnd</string>
    <string name="title_home">Home</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_notifications">Notifications</string>

    <string name="activity_create_squeak_label">Create Squeak</string>
    <string name="activity_view_squeak_label">Squeak</string>
    <string name="activity_select_profile">Select Profile</string>
    <string name="activity_manage_squeak_servers">Squeak Servers</string>
    <string name="activity_manage_profiles">Manage Profiles</string>
    <string name="activity_manage_contacts">Manage Contacts</string>
    <string name="activity_create_profile">Create Profile</string>
    <string name="activity_add_contact">Add contact</string>
    <string name="activity_view_profile">Profile</string>
    <string name="activity_view_server_address">Server Address</string>
    <string name="activity_view_server">Squeak Server</string>
    <string name="activity_view_address">Squeak Address</string>
    <string name="activity_buy_squeak">Buy Squeak</string>
    <string name="activity_offer">Offer</string>
    <string name="activity_lightning_node">Lightning Node</string>
    <string name="activity_money">Money</string>
    <string name="activity_electrum">Electrum Connection</string>

    <string name="preference_file_key">"io.github.yzernik.squeakand.PREFERENCE_FILE_KEY"</string>
    <string name="select_profile_button_text">Select a profile</string>
    <string name="no_profile_selected_text">No profile selected</string>
    <string name="new_todo_select_profile_button_text">Select a profile</string>
    <string name="manage_profiles_button_text">Manage Profiles</string>
    <string name="manage_profiles_new_profile_button_button">Create New Profile</string>
    <string name="create_profile_new_profile_name_text">New profile name</string>
    <string name="create_profile_generate_private_key_button">Generate Key Pair</string>
    <string name="create_profile_import_private_key_button">Import Key Pair</string>
    <string name="create_profile_complete_button_text">Create Profile</string>
    <string name="create_squeak_button">Create Squeak</string>
    <string name="home_empty_timeline_welcome_text">You have no squeaks in your timeline.</string>
    <string name="home_empty_timeline_suggestion_text">Connect to a squeak server, and add some contacts to fill in your timeline.</string>
</resources>
