<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="io.github.yzernik.squeakand.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="io.github.yzernik.squeakand.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/navigation_network"
        android:name="io.github.yzernik.squeakand.ui.network.NetworkFragment"
        android:label="Network"
        tools:layout="@layout/fragment_network" />

    <fragment
        android:id="@+id/navigation_money"
        android:name="io.github.yzernik.squeakand.ui.money.NoWalletInitializedMoneyFragment"
        android:label="Money"
        tools:layout="@layout/fragment_money" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="io.github.yzernik.squeakand.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>
