<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/create_profile_new_profile_name_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginTop="75dp"
        android:text="@string/create_profile_new_profile_name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/create_profile_new_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/create_profile_new_profile_name_display"
        app:layout_constraintTop_toBottomOf="@+id/create_profile_new_profile_name_display" />

    <Button
        android:id="@+id/create_profile_generate_private_key_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="195dp"
        android:text="@string/create_profile_generate_private_key_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_profile_import_private_key_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_profile_import_private_key_button"
        app:layout_constraintStart_toStartOf="@+id/create_profile_generate_private_key_button"
        app:layout_constraintTop_toBottomOf="@+id/create_profile_generate_private_key_button" />

</androidx.constraintlayout.widget.ConstraintLayout>